style: 代码格式化与文本块重构[Agent4j]